--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <main>
 </main>
 <footer>
+   <p> projeto desenvolvido pela alura, se, fins lucrativos</p>
 </footer>
-</footer>    
+</footer> 
 </body>
 </html>
